# project-ErfanM0N

./: CMakeLists.txt  CreateNewGame.c  Functions.h  GameGraphic.c  GameGraphic.h  Gamelogic.h  Logic.c  MenuPage.c  NameAndInit.c  NameMenu.h  PotionLogic.c  README.md  SoldierLogic.c  Structs.h  WinOrLose.c  main.c  main.cpp
Maps/: Map1.txt  Map2.txt  Map3.txt  Map4.txt  Map5.txt
